	- The book loading code now allows for blank lines, even
	  though these are not a part of the format. (added to
	  support some scripted apps that include extra
	  newlines...)

    BUG FIXES

	- The table formatting code adding the border width to
	  the cell width, while Netscape and MSIE don't.  This
	  caused some interesting formatting glitches...
	- The PDF catalog object could contain a reference to
	  a /Names object of "0 0 R", which is invalid.  This
	  would happen when the "--no-links" option was used.
	- Several HTML elements were incorrectly written with
	  closing tags.
	- When piping PDF output, the temporary file that is
	  created needed to be open for reading and writing,
	  but HTMLDOC only opened the file for writing.
	- Image links did not work.
	- The JPEG image loading code did not correctly handle
	  grayscale JPEG images.
	- JPEG images were not encrypted when writing a document
	  with encryption enabled.
	- The colormap of indexed images were not encrypted when
	  writing a document with encryption enabled.
	- The temporary file creation and cleanup functions did
	  not use the same template under Windows, causing
	  multiple conversions to fail when temporary files were
	  used.


CHANGES IN HTMLDOC v1.8.12

    NEW FEATURES

	- Added new "--batch" option to convert HTMLDOC book
	  files from the command-line.
	- Added support for the "-display" option on systems
	  that use X11.
	- Now use image objects in PDF output for images when
	  the image width * height * depth > 32k.
	- Now use JPEG compression when the number of colors
	  would be > 32 colors or 16 gray shades.
	- True transparency support for GIF files in PDF 1.3
	  output!
	- The GUI now automatically changes the extension of the
	  output filename as needed.
	- The GUI now collects all error messages and shows them
	  once after the document is generated.
	- Added support for HSPACE and VSPACE attributes for images
	  with ALIGN="LEFT" or ALIGN="RIGHT".