@@ -29,6 +29,7 @@ Now is the time for all good men to come to the aide of their country.
 <B>Now is the time for all good men to come to the aide of their country.</B></I>
 <U>Now is the time for all good men to come to the aide of their country.</U>
 <STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
 
 <P ALIGN="center">This paragraph contains centered text.
 Now is the time for all good men to come to the aide of their country.
@@ -37,6 +38,7 @@ Now is the time for all good men to come to the aide of their country.
 <B>Now is the time for all good men to come to the aide of their country.</B></I>
 <U>Now is the time for all good men to come to the aide of their country.</U>
 <STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
 
 <P ALIGN="right">This paragraph contains right-aligned text.
 Now is the time for all good men to come to the aide of their country.
@@ -45,6 +47,7 @@ Now is the time for all good men to come to the aide of their country.
 <B>Now is the time for all good men to come to the aide of their country.</B></I>
 <U>Now is the time for all good men to come to the aide of their country.</U>
 <STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
 
 <P ALIGN="justify">This paragraph contains justified text.
 Now is the time for all good men to come to the aide of their country.
@@ -53,6 +56,7 @@ Now is the time for all good men to come to the aide of their country.
 <B>Now is the time for all good men to come to the aide of their country.</B></I>
 <U>Now is the time for all good men to come to the aide of their country.</U>
 <STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
+<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
 
 </BODY>
 </HTML>
